--- a/public/books/viewBook.html
+++ b/public/books/viewBook.html
@@ -41,7 +41,10 @@
     </div>
                 
     <div id="content">
+        <h1>Perfil de Libro</h1>
         <form>
+            <fieldset>
+                <legend>Detalles del Libro:</legend>
             <div>
                 <label for="txt_name">Nombre</label>
                 <span id="txt_name"></span>
@@ -92,6 +95,7 @@
                 <label for="txt_quantity">Cantidad</label>
                 <span id="txt_quantity"></span>
             </div>
+        </fieldset>
 
         </form>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
