--- a/public/clubs/createClub.html
+++ b/public/clubs/createClub.html
@@ -49,13 +49,17 @@
     </div>
 
     <div id="content">
+        <h2>Clubes</h2>
+        <h3>Crear un nuevo Club</h3>
+        <p>Llene el siguiente formulario con los datos respectivos.</p>
+        <p>Los datos con el símbolo <span class="red">(*)</span> son requeridos.</p>
         <form>
             <div>
-                <label for="txt_name">Nombre</label>
+                <label for="txt_name">Nombre <span class="red">*</span></label>
                 <input type="text" id="txt_name">
             </div>
             <div>
-                <label for="txt_type">Tipo</label>
+                <label for="txt_type">Tipo <span class="red">*</span></label>
                 <select id="slt_type">
                     <option value=""></option>
                     <option value="Virtual">Virtual</option>
@@ -63,7 +67,7 @@
                 </select>
             </div>
             <div>
-                <label for="slt_genre">Género</label>
+                <label for="slt_genre">Género <span class="red">*</span></label>
                 <select id="slt_genre">
                     <option value=""></option>
                     <option value="Ficción">Ficción</option>
@@ -80,7 +84,7 @@
                 </select>
             </div>
             <div>
-                <label for="slt_startTime">Hora de inicio</label>
+                <label for="slt_startTime">Hora de inicio <span class="red">*</span></label>
                 <select id="slt_startTime">
                     <option value=""></option>
                     <option value="8:00 am">8:00 am</option>
@@ -96,7 +100,7 @@
                 </select>
             </div>
             <div>
-                <label for="slt_endTime">Hora de finalización</label>
+                <label for="slt_endTime">Hora de finalización <span class="red">*</span></label>
                 <select id="slt_endTime">
                     <option value=""></option>
                     <option value="9:00 am">9:00 am</option>
@@ -112,7 +116,7 @@
                 </select>
             </div>
             <div>
-                <label for="slt_day">Día</label>
+                <label for="slt_day">Día <span class="red">*</span></label>
                 <select id="slt_day">
                     <option value=""></option>
                     <option value="Lunes">Lunes</option>
@@ -125,7 +129,7 @@
                 </select>
             </div>
             <div>
-                <label for="txt_branch">Sucursal</label>
+                <label for="txt_branch">Sucursal <span class="red">*</span></label>
                 <input type="text" id="txt_branch">
             </div>
             <div>
