--- a/public/clubs/listClubs.html
+++ b/public/clubs/listClubs.html
@@ -42,14 +42,18 @@
     </div>
 
     <div id="content">
+      <h2>Clubes de Lectura</h2>
+      <h3>Lista de clubes de lectura registrados</h3>
   </body>
     <body>
-
+    <fieldset>
         <div class="search">
             <label for="search">Buscar clubes:</label><br>
             <input type="text" id="txtSearch" name="txtSearch">
             <button id="btnSearch" class="button"><img src="../img/search.png" alt="Buscar"></button>
         </div>
+      </fieldset>
+      <fieldset>
         <table id="tbl_clubs">
             <thead>
                 <tr>
@@ -66,6 +70,7 @@
 
             </tbody>
         </table>
+      </fieldset>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="../js/clubs/listClubs.js"></script>
