--- a/public/books/listBooks.html
+++ b/public/books/listBooks.html
@@ -42,12 +42,16 @@
     </div>
 
     <div id="content">
-  
+        <h2>Libros</h2>
+        <h3>Lista de libros registrados</h3>
+        <fieldset>
         <div class="search">
             <label for="search">Buscar libros:</label><br>
             <input type="text" id="txtSearch" name="txtSearch">
             <button id="btnSearch" class="button"><img src="../img/search.png" alt="Buscar"></button>
         </div>
+      </fieldset>
+      <fieldset>
         <table id = "tbl_books">
             <thead>
                 <tr>
@@ -70,6 +74,7 @@
               
             </tbody>  
         </table>
+      </fieldset>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="../js/books/listBooks.js"></script>
