--- a/public/users/signin.html
+++ b/public/users/signin.html
@@ -33,7 +33,7 @@
       </div>
 
       <p class="center"><button type="submit" class="button-primary" id="btnLogin">Iniciar Sesión</button></p><br>
-      <p class="center"><a href="./register.html">No es usuario aún? Regístrate acá</a></p>
+      <p class="center"><a href="./register.html">¿No eres usuario aún? Regístrate acá</a></p>
     </form>
   </div>
   <div class="login-box">
