--- a/public/users/template.html
+++ b/public/users/template.html
@@ -41,8 +41,8 @@
   <div class="center">
     <img src="https://res.cloudinary.com/lua-cenfotec/image/upload/dt7esnjv7rfz3ugbefxc" alt="Logo" title="Logo">
     <h1>Confirmación de cuenta</h1>
-    <p>Usted ha recibido este correo porque tu email fue usado para crear una cuenta en TitanBooks.</p>
-    <p>Utilice los siguientes datos para confirmar su cuenta a traves del siguiente enlace.</p>
+    <p>Has recibido este correo porque tu email fue usado para crear una cuenta en TitanBooks.</p>
+    <p>Utiliza los siguientes datos para confirmar tu cuenta a traves del siguiente enlace.</p>
     <p><strong><a href="##URL##">##URL##</a></strong></p>
   </div>
 
