--- a/public/books/listBooks.html
+++ b/public/books/listBooks.html
@@ -42,13 +42,18 @@
     </div>
 
     <div id="content">
-        <h2>Libros</h2>
-        <h3>Lista de libros registrados</h3>
+        <h1>Libros</h1>
+        <h2>Lista de libros registrados</h2>
         <fieldset>
         <div class="search">
             <label for="search">Buscar libros:</label><br>
             <input type="text" id="txtSearch" name="txtSearch">
             <button id="btnSearch" class="button"><img src="../img/search.png" alt="Buscar"></button>
+        </div>
+        <div>
+            <nav class="createLink">
+              <a href="createBook.html">Registrar Libro</a>
+            </nav>
         </div>
       </fieldset>
       <fieldset>
@@ -71,10 +76,10 @@
                 </tr>
             </thead>
             <tbody>
-              
             </tbody>  
         </table>
       </fieldset>
+      </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="../js/books/listBooks.js"></script>
