--- a/public/clubs/listClubs.html
+++ b/public/clubs/listClubs.html
@@ -42,8 +42,8 @@
     </div>
 
     <div id="content">
-      <h2>Clubes de Lectura</h2>
-      <h3>Lista de clubes de lectura registrados</h3>
+      <h1>Clubes de Lectura</h1>
+      <h2>Lista de clubes de lectura registrados</h2>
   </body>
     <body>
     <fieldset>
@@ -51,6 +51,11 @@
             <label for="search">Buscar clubes:</label><br>
             <input type="text" id="txtSearch" name="txtSearch">
             <button id="btnSearch" class="button"><img src="../img/search.png" alt="Buscar"></button>
+        </div>
+        <div>
+            <nav class="createLink">
+              <a href="createClub.html">Crear Club</a>
+            </nav>
         </div>
       </fieldset>
       <fieldset>
@@ -64,10 +69,10 @@
                     <td>Hora de finalización</td>
                     <td>Día</td>
                     <td>Sucursal</td>
+                    <td></td>
                 </tr>
             </thead>
             <tbody>
-
             </tbody>
         </table>
       </fieldset>
