--- a/public/clubs/updateClub.html
+++ b/public/clubs/updateClub.html
@@ -139,7 +139,7 @@
             </div>
             <div>
           </fieldset>
-                <button type="button" id="btn_update">Editar</button>
+                <button type="button" id="btn_update">Actualizar</button>
             </div>
 
         </form>
