Cambios en registro libre de libreria

--- a/public/users/signin.html
+++ b/public/users/signin.html
@@ -38,7 +38,7 @@
   </div>
   <div class="login-box">
     <p>¿Tienes una librería y quieres formar parte de nosotros?</p>
-    <p><a href="../libraries/add.html">Regístrala acá</a></p>
+    <p><a href="../libraries/register.html">Regístrala acá</a></p>
   </div>
 
 </body>
