--- a/public/users/update.html
+++ b/public/users/update.html
@@ -172,7 +172,7 @@
                     </div>
                 </fieldset>
                 <p>&nbsp;</p>
-                <button type="button" id="btnRegister" class="button-primary">Actualizar</button>
+                <button type="button" id="btnUpdate" class="button-primary">Actualizar</button>
                 <button type="button" id="btnCancel" class="button-secondary">Cancelar</button>
                 <p>&nbsp;</p>
             </form>
@@ -185,11 +185,9 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
 <script type="text/javascript" src="../js/layout.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-<script type="text/javascript" src="../js/users/edit.js"></script>
+<script type="text/javascript" src="../js/users/update.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
 <script type="text/javascript">
