Actualizado perfil de usuario en todas las paginas

--- a/public/libraries/detail.html
+++ b/public/libraries/detail.html
@@ -18,8 +18,7 @@
     <div class="topmenu-item"><a href="../aboutapp.html">Nuestro Producto</a></div>
     <div class="topmenu-item user-profile">
       <span class="helper">
-        <a id="user-profile-trigger">John Malkovich &nbsp; <img src="../img/user-portrait.jpeg" alt="Usuario"
-            height="30" width="30"></a>
+          <a id="user-profile-trigger"><span>John Malkovich</span> &nbsp; <img src="./img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
       </span>
       <div id="profile-menu" style="display: none">
         <ul>
