--- a/public/libraries/edit.html
+++ b/public/libraries/edit.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>TitanDev - Registrar Librería</title>
+  <title>TitanDev - Editar información de Librería</title>
   <link rel="stylesheet" type="text/css" href="../css/base.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 </head>
